tests/invalid/str_split_wrong_arg_count/main.py
def run_case() -> None:
    s: str = "1,2,3"
    out: list[str] = s.split()
    print(out)


if __name__ == "__main__":
    run_case()
